fix: correctly reinitialise cardinals, changed conclave logic
Cardinals now get reinitialised correctly without getting stucck
Conclave now initialises the votes array only once after all cardinals are constructed